[gd_scene load_steps=6 format=2]

[ext_resource path="res://Nodes/HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sound/next_level.wav" type="AudioStream" id=2]
[ext_resource path="res://Nodes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://Sound/wrong.wav" type="AudioStream" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="timerItem" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayerWrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AudioStreamPlayerOk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="timeout" from="timerItem" to="." method="_on_Timer_timeout"]
